--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -17,68 +17,77 @@
 </head>
 <body>
 
-  <h1>tld-parse Browser (CDN) Example</h1>
-  <p>This example demonstrates how to use the library directly in a browser by loading it from a CDN.</p>
+<h1>tld-parse Browser (CDN) Example</h1>
+<p>This example demonstrates how to use the library directly in a browser by loading it from a CDN.</p>
 
-  <h2>Status</h2>
-  <div id="status" class="loading">Loading TLD list...</div>
+<h2>Status</h2>
+<div id="status" class="loading">Loading TLD list...</div>
 
-  <h2>Results</h2>
-  <div id="results"></div>
+<h2>Results</h2>
+<div id="results"></div>
 
-  <script>
-    // The UMD build exposes the library on the `window` object.
-    // The global variable name is determined by the build configuration, often matching the filename.
-    const tldParse = window.domainExtract;
-    const statusEl = document.getElementById('status');
-    const resultsEl = document.getElementById('results');
+<script>
+  // The UMD build exposes the library on the `window` object.
+  // The global variable name is determined by the build configuration, often matching the filename.
+  const tldParse = window.domainExtract;
+  const statusEl = document.getElementById('status');
+  const resultsEl = document.getElementById('results');
 
-    async function main() {
-      try {
-        if (!tldParse) {
-          throw new Error('The `domainExtract` global variable is not available. Check if the CDN script loaded correctly.');
-        }
-
-        // Step 1: Fetch the Public Suffix List.
-        // For this example to work, `public_suffix_list.dat` must be in the same directory.
-        const response = await fetch('https://publicsuffix.org/list/public_suffix_list.dat');
-        if (!response.ok) {
-          throw new Error(`Failed to fetch TLD list: ${response.statusText}`);
-        }
-        const tldData = await response.text();
-
-        // Step 2: Register the list with the parser.
-        tldParse.register(tldData);
-
-        statusEl.textContent = 'TLD List Ready!';
-        statusEl.className = 'ready';
-
-        // Step 3: Run some examples and display the results.
-        const domainsToTest = [
-          'www.google.com',
-          'forums.bbc.co.uk',
-          'my-project.github.io',
-          'https://sub.example.co.jp/some/path?query=string'
-        ];
-
-        let html = '';
-        for (const domain of domainsToTest) {
-          const result = tldParse(domain);
-          html += `<h3>Input: <code>${domain}</code></h3>`;
-          html += `<pre>${JSON.stringify(result, null, 2)}</pre>`;
-        }
-        resultsEl.innerHTML = html;
-
-      } catch (error) {
-        statusEl.textContent = 'Error!';
-        statusEl.className = 'error';
-        resultsEl.innerHTML = `<pre>Failed to initialize parser: ${error.message}</pre>`;
-        console.error(error);
+  async function main() {
+    try {
+      if (!tldParse) {
+        throw new Error('The `domainExtract` global variable is not available. Check if the CDN script loaded correctly.');
       }
-    }
 
-    main();
-  </script>
+      // Step 1: Fetch the Public Suffix List.
+      // For this example to work, `public_suffix_list.dat` must be in the same directory.
+      const response = await fetch('https://publicsuffix.org/list/public_suffix_list.dat');
+      if (!response.ok) {
+        throw new Error(`Failed to fetch TLD list: ${response.statusText}`);
+      }
+      const tldData = await response.text();
+
+      // Step 2: Register the list with the parser.
+      tldParse.register(tldData);
+
+      statusEl.textContent = 'TLD List Ready!';
+      statusEl.className = 'ready';
+
+      // Step 3: Run some examples and display the results.
+      const domainsToTest = [
+        'www.google.com',
+        'google.com:8080',
+        'forums.bbc.co.uk',
+        'https://sub.example.co.jp/some/path?query=string',
+        'my-project.github.io', // Private domain
+        'sub.www.ck',             // Exception rule `!www.ck`
+        'sub.foo.ck',             // Wildcard rule `*.ck`
+        'localhost',              // Special hostname
+        '192.168.1.1',            // IPv4 address
+        '8.8.8.8',                // Public IPv4 address
+        '::1',                    // IPv6 localhost
+        '2001:0db8:85a3:0000:0000:8a2e:0370:7334', // Full IPv6 address
+        '[2001:db8::1]:8080'      // IPv6 address with port
+      ];
+
+      let html = '';
+      for (const domain of domainsToTest) {
+        const result = tldParse(domain);
+        html += `<h3>Input: <code>${domain}</code></h3>`;
+        html += `<pre>${JSON.stringify(result, null, 2)}</pre>`;
+      }
+      resultsEl.innerHTML = html;
+
+    } catch (error) {
+      statusEl.textContent = 'Error!';
+      statusEl.className = 'error';
+      resultsEl.innerHTML = `<pre>Failed to initialize parser: ${error.message}</pre>`;
+      console.error(error);
+    }
+  }
+
+  main();
+</script>
 
 </body>
 </html>
